overlays/uksouth-prod/olympus/boreas/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: retailer.${cluster_name}.${cluster_location}.bink.sh
spec:
  rules:
    - host: retailer.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: boreas-api
                port:
                  number: 80
          - path: /livez
            pathType: Exact
            backend:
              service:
                name: boreas-api
                port:
                  number: 80
  tls:
    - hosts:
        - retailer.${cluster_name}.${cluster_location}.bink.sh
